--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: echo a string
-        run: echo "Hello world"
+        run: echoo "Hello world"
 
       - name: multiline script
         run: |
