--- a/.github/workflows/variable_env.yml
+++ b/.github/workflows/variable_env.yml
@@ -11,4 +11,27 @@ jobs:
       - name: "Dites Salut Desire nous sommes lundi"
         run: echo "$Greeting $First_Name. Nous sommes $DAY_OF_WEEK!"
         env:
-          First_Name: Desire ## Variable d'environnement uniquement pour l'étape "Dites Salut Desire nous sommes lundi" de la tâche "greeting_job"
+          First_Name: Desire ## Variable d'environnement uniquement pour l'étape "Dites Salut Desire nous sommes lundi" de la tâche "greeting_job" 
+
+# create_commit:
+#   runs-on: ubuntu-latest
+#   permissions:
+#     contents: write
+#   steps:
+#     - name: Push a file to our repository
+#       run: |
+#         pwd
+#         ls -a 
+#         git init
+#         git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" 
+#         git config --global user.email "my-bot@bot.com"
+#         git config --global user.name "my-bot"
+#         git fetch
+#         git checkout main
+#         git branch --set-upstream-to=origin/main
+#         git pull
+#         pytest >> log_pytest.txt
+#         ls -a
+#         git add .
+#         git commit -m "random file from action"
+#         git push
